Fixed bug with poster not showing in more-info view

--- a/app/assets/stylesheets/users/enrollments.scss
+++ b/app/assets/stylesheets/users/enrollments.scss
@@ -8,7 +8,8 @@
   width: 150px;
 }
 
-.poster-moreinfo img {
+.poster-moreinfo a img {
+  width: 500px;
 	max-width: 100%;
 }
 
